# whitepapers-and-books

./: .gitignore  CONTRIBUTING.md  README.md
books/: designing-data-intensive-applications.md  head-first-design-patterns.md  rust.md
books/4-The-Factory-Pattern/food/: .factorypath
books/Designing-Data-Intensive-Application/: README.md  designing-data-intensive-applications.md
books/Docker/: README.md
books/Effective-Java/: README.md
books/HLD/: README.md
books/HLD-Interview/: README.md
books/Head-First-Design-Patterns/: README.md  head-first-design-patterns.md
books/Head-First-Design-Patterns/billsharing/: ClassDiagram.md  README.md  pom.xml
books/Head-First-Design-Patterns/my-app/: pom.xml
books/Introduction-to-Java/: README.md  todo.md
books/Java-concurrency/: README.md
books/KafkaStream/: shortnotes.md
books/The-GoLang/: README.md  notes.md
books/The-Rust-Programming-Language/: README.md
books/Virtualization/: README.md  virtualization.md
books/blogs/: README.md
weekly-algorithms/: README.md
whitepaperImpl/GoogleFileSystem/: chunkserver.py  client.py  test_client.py
whitepapers/: CRAQ.md  CRDT-Bayou.md  Zookeeper.md  amazon-firecracker.md  apple-foundation-db.md  google-spanner.md  kafka.md  list-of-whitepapers.md  raft.html  raft.md
whitepapers-impl/AmazonDynamo/: README.md
whitepapers-impl/GoogleFileSystem/: README.md  master.py  requirements.txt  test2.txt
whitepapers-impl/raft-cpp/: CMakeLists.txt
whitepapers-impl/raft-cpp/src/: CMakeLists.txt
whitepapers-impl/raft-cpp/src/raft/: log.cpp  log.h
(+131 files in other folders)
